grid piece数据压缩