@@ -10,17 +10,27 @@ import net.minecraft.world.level.levelgen.structure.BoundingBox;
 import net.minecraft.world.level.levelgen.structure.TemplateStructurePiece;
 import net.minecraft.world.level.levelgen.structure.pieces.StructurePieceSerializationContext;
 import net.minecraft.world.level.levelgen.structure.templatesystem.BlockIgnoreProcessor;
+import net.minecraft.world.level.levelgen.structure.templatesystem.LiquidSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructurePlaceSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplateManager;
 import org.hismeo.hazedungeon.HazeDungeon;
 
 public class SimpleTemplatePiece extends TemplateStructurePiece {
     public SimpleTemplatePiece(StructureTemplateManager structureTemplateManager, String name, BlockPos startPos, boolean overwrite, boolean ignoreEntities, Rotation rotation) {
-        super(ModStructures.SIMPLE_TEMPLATE_PIECE.get(), 0, structureTemplateManager, HazeDungeon.asResource("simple_template/" + name), name, makeSettings(overwrite, ignoreEntities, rotation), startPos);
+        this(structureTemplateManager, name, startPos, overwrite, ignoreEntities, false, rotation);
+    }
+
+    public SimpleTemplatePiece(StructureTemplateManager structureTemplateManager, String name, BlockPos startPos, boolean overwrite, boolean ignoreEntities, boolean appleWaterlogging, Rotation rotation) {
+        super(ModStructures.SIMPLE_TEMPLATE_PIECE.get(), 0, structureTemplateManager, HazeDungeon.asResource("simple_template/" + name), name, makeSettings(overwrite, ignoreEntities, appleWaterlogging, rotation), startPos);
     }
 
     public SimpleTemplatePiece(StructureTemplateManager structureTemplateManager, CompoundTag tag) {
-        super(ModStructures.SIMPLE_TEMPLATE_PIECE.get(), tag, structureTemplateManager, location -> makeSettings(tag.getBoolean("OW"), tag.getBoolean("IE"), Rotation.valueOf(tag.getString("Rot"))));
+        super(ModStructures.SIMPLE_TEMPLATE_PIECE.get(), tag, structureTemplateManager, location -> makeSettings(
+                tag.getBoolean("OW"),
+                tag.getBoolean("IE"),
+                tag.getBoolean("AW"),
+                Rotation.valueOf(tag.getString("Rot"))
+        ));
     }
 
     @Override
@@ -28,16 +38,22 @@ public class SimpleTemplatePiece extends TemplateStructurePiece {
         return HazeDungeon.asResource("simple_template/" + templateName);
     }
 
-    private static StructurePlaceSettings makeSettings(boolean overwrite, boolean ignoreEntities, Rotation rotation) {
+    private static StructurePlaceSettings makeSettings(boolean overwrite, boolean ignoreEntities, boolean appleWaterlogging, Rotation rotation) {
+        LiquidSettings liquidSettings = appleWaterlogging ? LiquidSettings.APPLY_WATERLOGGING : LiquidSettings.IGNORE_WATERLOGGING;
         BlockIgnoreProcessor blockignoreprocessor = overwrite ? BlockIgnoreProcessor.STRUCTURE_BLOCK : BlockIgnoreProcessor.STRUCTURE_AND_AIR;
-        return new StructurePlaceSettings().setIgnoreEntities(true).addProcessor(blockignoreprocessor).setRotation(rotation);
+        return new StructurePlaceSettings()
+                .setIgnoreEntities(ignoreEntities)
+                .setLiquidSettings(liquidSettings)
+                .addProcessor(blockignoreprocessor)
+                .setRotation(rotation);
     }
 
     @Override
     protected void addAdditionalSaveData(StructurePieceSerializationContext context, CompoundTag tag) {
         super.addAdditionalSaveData(context, tag);
-        tag.putBoolean("OW", placeSettings.getProcessors().get(0) == BlockIgnoreProcessor.STRUCTURE_BLOCK);
+        tag.putBoolean("OW", placeSettings.getProcessors().getFirst() == BlockIgnoreProcessor.STRUCTURE_BLOCK);
         tag.putBoolean("IE", placeSettings.isIgnoreEntities());
+        tag.putBoolean("AW", placeSettings.shouldApplyWaterlogging());
         tag.putString("Rot", placeSettings.getRotation().name());
     }
 
